--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <a href=""><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта"></a>
+      <a target="_self" href=""><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта"></a>
                 </header>
     <section class="profile">
       <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя">
@@ -20,34 +20,34 @@
         <img class="profile__add-button" src="./images/add_button.svg"></section>
     <section class="elements">
 
-      <div class="element">
+      <div  class="element">
         <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк">
-        <h3 class="element__title">Карачаевк</h3>
+        <h3 class="element__title">Карачаевк</h3><img type="button"  class="element__like" src="./images/like.jpg">
                 </div>
 
         <div class="element">
           <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус">
-          <h3 class="element__title">Гора Эльбрус</h3>
+          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg">
                     </div>
            
       <div class="element">
         <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-        <h3 class="element__title">Домбай</h3>
+        <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg">
         </div>
 
         <div class="element">
           <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус">
-          <h3 class="element__title">Гора Эльбрус</h3>
+          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg">
         </div>  
 
           <div class="element">
             <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-            <h3 class="element__title">Домбай</h3></button>
+            <h3 class="element__title">Домбай</h3></button><img type="button" class="element__like" src="./images/like.jpg">
           </div> 
 
             <div class="element">
               <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк">
-              <h3 class="element__title">Карачаево-Черкесия</h3>
+              <h3 class="element__title">Карачаево-Черкесия</h3><img type="button" class="element__like" src="./images/like.jpg">
             </div>
             </section>
     
