--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <div class="element">
             <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-            <h3 class="element__title">Домбай</h3></button><img type="button" class="element__like" src="./images/like.jpg">
+            <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg">
           </div> 
 
             <div class="element">
