--- a/index.html
+++ b/index.html
@@ -10,44 +10,44 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <a target="_self" href=""><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта"></a>
+      <a target="_self" href="#"><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта"></a>
                 </header>
     <section class="profile">
       <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя">
       <div class="profile__form"><h1 class="profile__name" value="Жак-Ив Кусто">Жак-Ив Кусто</h1>
         <p class="profile__about">Исследователь океана</p></div>
-        <img type="button" class="profile__edit-button" src="./images/edit_button.svg">
-        <img class="profile__add-button" src="./images/add_button.svg"></section>
+        <img type="button" class="profile__edit-button" src="./images/edit_button.svg" alt="кнопка редактировать">
+        <img class="profile__add-button" src="./images/add_button.svg" alt="кнопка добавить"></section>
     <section class="elements">
 
       <div  class="element">
         <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк">
-        <h3 class="element__title">Карачаевк</h3><img type="button"  class="element__like" src="./images/like.jpg">
+        <h3 class="element__title">Карачаевк</h3><img type="button"  class="element__like" src="./images/like.jpg" alt="кнопка лайк">
                 </div>
 
         <div class="element">
           <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус">
-          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg">
+          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
                     </div>
            
       <div class="element">
         <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-        <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg">
+        <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
         </div>
 
         <div class="element">
           <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус">
-          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg">
+          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
         </div>  
 
           <div class="element">
             <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-            <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg">
+            <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
           </div> 
 
             <div class="element">
               <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк">
-              <h3 class="element__title">Карачаево-Черкесия</h3><img type="button" class="element__like" src="./images/like.jpg">
+              <h3 class="element__title">Карачаево-Черкесия</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
             </div>
             </section>
     
