--- a/index.html
+++ b/index.html
@@ -1,70 +1,79 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="./pages/index.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Место</title>
+    </head>
+    <body class="body">
+        <div class="page">
+            <header class="header">
+                <a target="_self" href="#"><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта" /></a>
+            </header>
+            <section class="profile">
+                <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя" />
+                <div class="profile__form">
+                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <p class="profile__about">Исследователь океана</p>
+                </div>
+                <button type="button" class="profile__edit-button"></button>
+                <button type="button" class="profile__add-button"></button>
+            </section>
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="./pages/index.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Место</title>
-</head>
-<body class="body">
-  <div class="page">
-    <header class="header">
-      <a target="_self" href="#"><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта"></a>
-                </header>
-    <section class="profile">
-      <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя">
-      <div class="profile__form"><h1 class="profile__name" value="Жак-Ив Кусто">Жак-Ив Кусто</h1>
-        <p class="profile__about">Исследователь океана</p></div>
-        <img type="button" class="profile__edit-button" src="./images/edit_button.svg" alt="кнопка редактировать">
-        <img class="profile__add-button" src="./images/add_button.svg" alt="кнопка добавить"></section>
-    <section class="elements">
-
-      <div  class="element">
-        <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк">
-        <h3 class="element__title">Карачаевк</h3><img type="button"  class="element__like" src="./images/like.jpg" alt="кнопка лайк">
+            <section class="elements">
+                <div class="element">
+                    <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк" />
+                    <h3 class="element__title">Карачаевк</h3>
+                    <button type="button" class="element__like"></button>
                 </div>
 
-        <div class="element">
-          <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус">
-          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
-                    </div>
-           
-      <div class="element">
-        <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-        <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
-        </div>
+                <div class="element">
+                    <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус" />
+                    <h3 class="element__title">Гора Эльбрус</h3>
+                    <button type="button" class="element__like"></button>
+                </div>
 
-        <div class="element">
-          <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус">
-          <h3 class="element__title">Гора Эльбрус</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
-        </div>  
+                <div class="element">
+                    <img class="element__image" src="./images/dombai.jpg" alt="Домбай" />
+                    <h3 class="element__title">Домбай</h3>
+                    <button type="button" class="element__like"></button>
+                </div>
 
-          <div class="element">
-            <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
-            <h3 class="element__title">Домбай</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
-          </div> 
+                <div class="element">
+                    <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус" />
+                    <h3 class="element__title">Гора Эльбрус</h3>
+                    <button type="button" class="element__like"></button>
+                </div>
 
-            <div class="element">
-              <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк">
-              <h3 class="element__title">Карачаево-Черкесия</h3><img type="button" class="element__like" src="./images/like.jpg" alt="кнопка лайк">
-            </div>
+                <div class="element">
+                    <img class="element__image" src="./images/dombai.jpg" alt="Домбай" />
+                    <h3 class="element__title">Домбай</h3>
+                    <button type="button" class="element__like"></button>
+                </div>
+
+                <div class="element">
+                    <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк" />
+                    <h3 class="element__title">Карачаево-Черкесия</h3>
+                    <button type="button" class="element__like"></button>
+                </div>
             </section>
-    
-    <footer class="footer">
-      <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
-    </footer>
-  </div>
-  <div class="popup">
-    <div class="popup__window"><h2 class="popup__title">Редактировать профиль</h2>
-        <button type="button" class="popup__close-btn"></button>
-        <form class="popup__form">
-            <input type="text"  value='' class="popup__input-name"/>
-            <input type="text"  value='' class="popup__input-about"/>
-            <button type="submit" class="popup__submit-btn">Сохранить</button>
-        </form>
-    </div>
-</div>
-<script src="./scripts/scripts.js"></script>
-</body>
+
+            <footer class="footer">
+                <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+            </footer>
+        </div>
+        <div class="popup">
+            <div class="popup__window">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <button type="button" class="popup__close-btn"></button>
+                <form name="subscribe-form" class="popup__form">
+                    <input type="text" value="" name="name" class="popup__input popup__input_name" />
+                    <input type="text" value="" name="about" class="popup__input popup__input_about" />
+                    <button type="submit" class="popup__submit-btn">Сохранить</button>
+                </form>
+            </div>
+        </div>
+        <script src="./scripts/scripts.js"></script>
+    </body>
 </html>
