--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button type="button" class="popup__close-btn"></button>
                 <form name="subscribe-form" class="popup__form">
-                    <input type="text" value="" name="name" class="popup__input popup__input_name" />
-                    <input type="text" value="" name="about" class="popup__input popup__input_about" />
+                    <input type="text" value="" name="name" class="popup__input popup__input_form_name" />
+                    <input type="text" value="" name="about" class="popup__input popup__input_form_about" />
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
                 </form>
             </div>
