--- a/index.html
+++ b/index.html
@@ -21,59 +21,51 @@
                 <button type="button" class="profile__add-button"></button>
             </section>
 
-            <section class="elements">
-                <div class="element">
-                    <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк" />
-                    <h3 class="element__title">Карачаевк</h3>
-                    <button type="button" class="element__like"></button>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус" />
-                    <h3 class="element__title">Гора Эльбрус</h3>
-                    <button type="button" class="element__like"></button>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/dombai.jpg" alt="Домбай" />
-                    <h3 class="element__title">Домбай</h3>
-                    <button type="button" class="element__like"></button>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/montain-elbrus.jpg" alt="Гора Эльбрус" />
-                    <h3 class="element__title">Гора Эльбрус</h3>
-                    <button type="button" class="element__like"></button>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/dombai.jpg" alt="Домбай" />
-                    <h3 class="element__title">Домбай</h3>
-                    <button type="button" class="element__like"></button>
-                </div>
-
-                <div class="element">
-                    <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевк" />
-                    <h3 class="element__title">Карачаево-Черкесия</h3>
-                    <button type="button" class="element__like"></button>
-                </div>
-            </section>
+            <section class="elements"></section>
 
             <footer class="footer">
                 <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
             </footer>
         </div>
-        <div class="popup">
+        <div class="popup popup__design_edit-profile">
             <div class="popup__window">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <button type="button" class="popup__close-btn"></button>
+                <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
                 <form name="subscribe-form" class="popup__form">
                     <input type="text" value="" name="name" class="popup__input popup__input_form_name" />
                     <input type="text" value="" name="about" class="popup__input popup__input_form_about" />
-                    <button type="submit" class="popup__submit-btn">Сохранить</button>
+                    <button type="submit" class="popup__submit-btn popup__submit-btn_edit-profile">Сохранить</button>
                 </form>
             </div>
         </div>
+        <div class="popup popup__design_add-element">
+            <div class="popup__window">
+                <h2 class="popup__title">Новое место</h2>
+                <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
+                <form name="subscribe-form" class="popup__form">
+                    <input type="text" value="Название" name="title" class="popup__input popup__input_form_title" />
+                    <input type="text" value="Ссылка на картинку" name="link" class="popup__input popup__input_form_link" />
+                    <button type="submit" class="popup__submit-btn popup__submit-btn_add-element">Сохранить</button>
+                </form>
+            </div>
+        </div>
+        <div class="popup popup__design_zoom">
+            <div class="popup__window popup__window-zoom">
+                <img class="popup__image_zoom" src="#" alt="" />
+                <h2 class="popup__title-zoom"></h2>
+                <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
+            </div>
+        </div>
+
+        <template class="template">
+            <div class="element">
+                <img class="element__image" src="" alt="" />
+                <h3 class="element__title"></h3>
+                <button type="button" class="element__like"></button>
+                <button type="button" class="element__remove"></button>
+            </div>
+        </template>
         <script src="./scripts/scripts.js"></script>
     </body>
 </html>
+
