--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="popup popup__design_zoom">
             <div class="popup__window popup__window-zoom">
-                <img class="popup__image_zoom" src="https://via.placeholder.com/150" alt="фото РФ" />
+                <img class="popup__image_zoom" src="./images/150.png" alt="" />
                 <h2 class="popup__title-zoom"></h2>
                 <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
             </div>
