--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
             </footer>
         </div>
-        <div class="popup popup__design_edit-profile">
+        <div class="popup popup__design-edit-profile">
             <div class="popup__window">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
@@ -51,7 +51,7 @@
         </div>
         <div class="popup popup__design_zoom">
             <div class="popup__window popup__window-zoom">
-                <img class="popup__image_zoom" src="#" alt="" />
+                <img class="popup__image-zoom" src="#" alt="пустышка" />
                 <h2 class="popup__title-zoom"></h2>
                 <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
             </div>
@@ -59,7 +59,7 @@
 
         <template class="template">
             <div class="element">
-                <img class="element__image" src="#" alt="" />
+                <img class="element__image" src="#" alt="пустышка" />
                 <h3 class="element__title"></h3>
                 <button type="button" class="element__like"></button>
                 <button type="button" class="element__remove"></button>
