--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
             </footer>
         </div>
-        <div class="popup popup__design-edit-profile">
+        <div class="popup popup__edit-profile">
             <div class="popup__window">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
@@ -38,7 +38,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__design_add-element">
+        <div class="popup popup__add-element">
             <div class="popup__window">
                 <h2 class="popup__title">Новое место</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
@@ -49,7 +49,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__design_zoom">
+        <div class="popup popup__zoom">
             <div class="popup__window popup__window-zoom">
                 <img class="popup__image-zoom" src="#" alt="пустышка" />
                 <h2 class="popup__title-zoom"></h2>
