--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
             </footer>
         </div>
-        <div class="popup popup__edit-profile">
+        <div class="popup popup_edit-profile">
             <div class="popup__window">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
@@ -38,7 +38,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__add-element">
+        <div class="popup popup_add-element">
             <div class="popup__window">
                 <h2 class="popup__title">Новое место</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
