--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </form>
             </div>
         </div>
-        <div class="popup popup__zoom">
+        <div class="popup popup_zoom">
             <div class="popup__window popup__window-zoom">
                 <img class="popup__image-zoom" src="#" alt="пустышка" />
                 <h2 class="popup__title-zoom"></h2>
