--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
                 <form name="subscribe-form" class="popup__form">
-                    <input type="text" value="" name="name" class="popup__input popup__input_form_name" />
-                    <input type="text" value="" name="about" class="popup__input popup__input_form_about" />
+                    <input type="text" value="" placeholder="Имя" name="name" class="popup__input popup__input_form_name" />
+                    <input type="text" value="" placeholder="О себе" name="about" class="popup__input popup__input_form_about" />
                     <button type="submit" class="popup__submit-btn popup__submit-btn_edit-profile">Сохранить</button>
                 </form>
             </div>
@@ -43,8 +43,8 @@
                 <h2 class="popup__title">Новое место</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
                 <form name="subscribe-form" class="popup__form">
-                    <input type="text" value="Название" name="title" class="popup__input popup__input_form_title" />
-                    <input type="text" value="Ссылка на картинку" name="link" class="popup__input popup__input_form_link" />
+                    <input type="text" value="Название" placeholder="Название" name="title" class="popup__input popup__input_form_title" />
+                    <input type="text" value="Ссылка на картинку" placeholder="Ссылка на картинку"name="link" class="popup__input popup__input_form_link" />
                     <button type="submit" class="popup__submit-btn popup__submit-btn_add-element">Сохранить</button>
                 </form>
             </div>
