--- a/index.html
+++ b/index.html
@@ -1,71 +1,81 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./pages/index.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Место</title>
-    </head>
-    <body class="body">
-        <div class="page">
-            <header class="header">
-                <a target="_self" href="#"><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта" /></a>
-            </header>
-            <section class="profile">
-                <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя" />
-                <div class="profile__form">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <p class="profile__about">Исследователь океана</p>
-                </div>
-                <button type="button" class="profile__edit-button"></button>
-                <button type="button" class="profile__add-button"></button>
-            </section>
 
-            <section class="elements"></section>
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./pages/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Место</title>
+</head>
 
-            <footer class="footer">
-                <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
-            </footer>
-        </div>
-        <div class="popup popup_edit-profile">
-            <div class="popup__window">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
-                <form name="subscribe-form" class="popup__form">
-                    <input type="text" value="" placeholder="Имя" name="name" class="popup__input popup__input_form_name" />
-                    <input type="text" value="" placeholder="О себе" name="about" class="popup__input popup__input_form_about" />
-                    <button type="submit" class="popup__submit-btn popup__submit-btn_edit-profile">Сохранить</button>
-                </form>
+<body class="body">
+    <div class="page">
+        <header class="header">
+            <a target="_self" href="#"><img src="./images/logo.jpg" class="header__logo" alt="логотип сайта" /></a>
+        </header>
+        <section class="profile">
+            <img class="profile__avatar" src="./images/avatar.jpg" alt="аватар пользователя" />
+            <div class="profile__form">
+                <h1 class="profile__name">Жак-Ив Кусто</h1>
+                <p class="profile__about">Исследователь океана</p>
             </div>
-        </div>
-        <div class="popup popup_add-element">
-            <div class="popup__window">
-                <h2 class="popup__title">Новое место</h2>
-                <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
-                <form name="subscribe-form" class="popup__form">
-                    <input type="text" value="Название" placeholder="Название" name="title" class="popup__input popup__input_form_title" />
-                    <input type="text" value="Ссылка на картинку" placeholder="Ссылка на картинку"name="link" class="popup__input popup__input_form_link" />
-                    <button type="submit" class="popup__submit-btn popup__submit-btn_add-element">Сохранить</button>
-                </form>
-            </div>
-        </div>
-        <div class="popup popup_zoom">
-            <div class="popup__window popup__window-zoom">
-                <img class="popup__image-zoom" src="#" alt="пустышка" />
-                <h2 class="popup__title-zoom"></h2>
-                <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
-            </div>
-        </div>
+            <button type="button" class="profile__edit-button"></button>
+            <button type="button" class="profile__add-button"></button>
+        </section>
 
-        <template class="template">
-            <div class="element">
-                <img class="element__image" src="#" alt="пустышка" />
-                <h3 class="element__title"></h3>
-                <button type="button" class="element__like"></button>
-                <button type="button" class="element__remove"></button>
-            </div>
-        </template>
-        <script src="./scripts/scripts.js"></script>
-    </body>
+        <section class="elements"></section>
+
+        <footer class="footer">
+            <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+        </footer>
+    </div>
+    <div class="popup popup_edit-profile">
+        <div class="popup__window">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
+            <form name="subscribe-form" class="popup__form" novalidate>
+                <input autocomplete='off' required minlength="2" maxlength="40" type="text" value="" id="name-card"
+                    placeholder="Имя" name="name" class="popup__input popup__input_form_name" />
+                <span id="name-card-error" class="popup__error popup__error_area_name"></span>
+                <input autocomplete='off' required minlength="2" maxlength="40" type="text" value="" id="about-card"
+                    placeholder="О себе" name="about" class="popup__input popup__input_form_about" />
+                <span id="about-card-error" class="popup__error popup__error_area_about"></span>
+                <button type="submit" class="popup__submit-btn popup__submit-btn_edit-profile">Сохранить</button>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup_add-element">
+        <div class="popup__window">
+            <h2 class="popup__title">Новое место</h2>
+            <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
+            <form name="subscribe-form" class="popup__form" novalidate>
+                <input autocomplete='off' required minlength="2" maxlength="40" type="text" id="title-card"
+                    value="Название" placeholder="Название" name="title" class="popup__input popup__input_form_title" />
+                <span id="title-card-error" class="popup__error popup__error_area_title"></span>
+                <input autocomplete='off' required type="url" id="link-card" value="Ссылка на картинку"
+                    placeholder="Ссылка на картинку" name="link" class="popup__input popup__input_form_link" />
+                <span id="link-card-error" class="popup__error popup__error_area_link"></span>
+                <button type="submit" class="popup__submit-btn popup__submit-btn_add-element">Сохранить</button>
+            </form>
+        </div>
+    </div>
+    <div class="popup popup_zoom">
+        <div class="popup__window popup__window-zoom">
+            <img class="popup__image-zoom" src="#" alt="пустышка" />
+            <h2 class="popup__title-zoom"></h2>
+            <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
+        </div>
+    </div>
+
+    <template class="template">
+        <div class="element">
+            <img class="element__image" src="#" alt="пустышка" />
+            <h3 class="element__title"></h3>
+            <button type="button" class="element__like"></button>
+            <button type="button" class="element__remove"></button>
+        </div>
+    </template>
+    <script src="./scripts/scripts.js"></script>
+</body>
+
 </html>
-
