--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <button type="button" class="element__remove"></button>
         </div>
     </template>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/scripts.js"></script>
 </body>
 
