--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="popup__window">
             <h2 class="popup__title">Редактировать профиль</h2>
             <button type="button" class="popup__close-btn popup__close-btn_edit-profile"></button>
-            <form name="subscribe-form-profile" class="popup__form" novalidate>
+            <form name="subscribe-form-profile" class="popup__form popup__form_area_editprofile" novalidate>
                 <input autocomplete='off' required minlength="2" maxlength="40" type="text" value="" id="name-card"
                     placeholder="Имя" name="name" class="popup__input popup__input_form_name" />
                 <span id="name-card-error" class="popup__error popup__error_area_name"></span>
@@ -48,7 +48,7 @@
         <div class="popup__window">
             <h2 class="popup__title">Новое место</h2>
             <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
-            <form name="subscribe-form-card" class="popup__form" novalidate>
+            <form name="subscribe-form-card" class="popup__form popup__form_area_newcard" novalidate>
                 <input autocomplete='off' required minlength="2" maxlength="40" type="text" id="title-card"
                     value="" placeholder="Название" name="title" class="popup__input popup__input_form_title" />
                 <span id="title-card-error" class="popup__error popup__error_area_title"></span>
