--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <h2 class="popup__title">Новое место</h2>
             <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
             <form name="subscribe-form-card" class="popup__form popup__form_area_newcard" novalidate>
-                <input autocomplete='off' required minlength="2" maxlength="40" type="text" id="title-card"
-                    value="" placeholder="Название" name="title" class="popup__input popup__input_form_title" />
+                <input autocomplete='off' required minlength="2" maxlength="40" type="text" id="title-card" value=""
+                    placeholder="Название" name="title" class="popup__input popup__input_form_title" />
                 <span id="title-card-error" class="popup__error popup__error_area_title"></span>
-                <input autocomplete='off' required type="url" id="link-card" value=""
-                    placeholder="Ссылка на картинку" name="link" class="popup__input popup__input_form_link" />
+                <input autocomplete='off' required type="url" id="link-card" value="" placeholder="Ссылка на картинку"
+                    name="link" class="popup__input popup__input_form_link" />
                 <span id="link-card-error" class="popup__error popup__error_area_link"></span>
                 <button type="submit" class="popup__submit-btn popup__submit-btn_add-element">Сохранить</button>
             </form>
