--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <button type="button" class="element__remove"></button>
         </div>
     </template>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/initialCards.js"></script>
-    <script src="./scripts/scripts.js"></script>
+    
+    
+    <script type="module" src="./scripts/scripts.js"></script>
 </body>
 
 </html>
