--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
-        
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Место</title>
     </head>
@@ -15,8 +15,8 @@
             <section class="profile">
                 <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар пользователя" />
                 <div class="profile__form">
-                    <h1 name="profile-name"class="profile__name">Жак-Ив Кусто</h1>
-                    <p name="profile-about"class="profile__about">Исследователь океана</p>
+                    <h1 name="profileName" class="profile__name">Жак-Ив Кусто</h1>
+                    <p name="profileAbout" class="profile__about">Исследователь океана</p>
                 </div>
                 <button type="button" class="profile__edit-button"></button>
                 <button type="button" class="profile__add-button"></button>
@@ -70,5 +70,5 @@
                 <button type="button" class="element__remove"></button>
             </div>
         </template>
-           </body>
+    </body>
 </html>
