--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
                 <a target="_self" href="#"><img src="<%=require('./images/logo.jpg')%>" class="header__logo" alt="логотип сайта" /></a>
             </header>
             <section class="profile">
-                <img class="profile__avatar" src="<%=require('./images/avatar.jpg')%>" alt="аватар пользователя" />
+                <img class="profile__avatar" src="" alt="аватар пользователя" />
                 <div class="profile__form">
-                    <h1 name="profileName" class="profile__name">Жак-Ив Кусто</h1>
-                    <p name="profileAbout" class="profile__about">Исследователь океана</p>
+                    <h1 name="profileName" class="profile__name"></h1>
+                    <p name="profileAbout" class="profile__about"></p>
                 </div>
                 <button type="button" class="profile__edit-button"></button>
                 <button type="button" class="profile__add-button"></button>
@@ -46,7 +46,7 @@
                 <h2 class="popup__title">Новое место</h2>
                 <button type="button" class="popup__close-btn popup__close-btn_add-new-element"></button>
                 <form name="subscribe-form-card" class="popup__form popup__form_area_newcard" novalidate>
-                    <input autocomplete="off" required minlength="2" maxlength="40" type="text" id="title-card" value="" placeholder="Название" name="title" class="popup__input popup__input_form_title" />
+                    <input autocomplete="off" required minlength="2" maxlength="40" type="text" id="title-card" value="" placeholder="Название" name="name" class="popup__input popup__input_form_title" />
                     <span id="title-card-error" class="popup__error popup__error_area_title"></span>
                     <input autocomplete="off" required type="url" id="link-card" value="" placeholder="Ссылка на картинку" name="link" class="popup__input popup__input_form_link" />
                     <span id="link-card-error" class="popup__error popup__error_area_link"></span>
