--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
             </header>
             <section class="profile">
                 <img class="profile__avatar" src="" alt="аватар пользователя" />
+                <div class="profile__avatar-edit"></div> 
                 <div class="profile__form">
                     <h1 name="profileName" class="profile__name"></h1>
                     <p name="profileAbout" class="profile__about"></p>
@@ -61,11 +62,31 @@
                 <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
             </div>
         </div>
-
+        <div class="popup popup__avatar">
+            <div class="popup__window popup__window-avatar">
+                <button type="button" class="popup__close-btn popup__close-btn_avatar"></button>
+              <h3 class="popup__title">Обновить аватар</h3>
+              <form class="popup__form popup__form_area_avatar" name="avatar">
+                                <input autocomplete="off" required type="url" id="Link-Avatar" value="" placeholder="Ссылка на аватар" name="link" class="popup__input popup__input_form_avatar" />
+                <span id="Link-Avatar-error" class="popup__error popup__error_area_avatar"></span> 
+                <button type="submit" class="popup__submit-btn popup__submit-btn_avatar">Сохранить</button> 
+              </form>
+            </div>
+          </div>
+          <div class="popup popup_delete-confirm"> 
+            <div class="popup__window popup__window_delete-confirm"> 
+                <h2 class="popup__title popup__title_delete-confirm">Вы уверены?</h2> 
+                <button type="button" class="popup__close-btn popup__close-btn_delete-confirm"></button> 
+                <form class="popup__form popup__form_area_confirm" >
+                <button type="submit" class="popup__submit-btn popup__submit-btn_delete-confirm">Да</button> 
+  </form>
+                
+                            </div>
         <template class="template">
             <div class="element">
                 <img class="element__image" src="#" alt="пустышка" />
                 <h3 class="element__title"></h3>
+                <h4 class="element__likeSum">0</h4>
                 <button type="button" class="element__like"></button>
                 <button type="button" class="element__remove"></button>
             </div>
