--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                     alt="логотип сайта" /></a>
         </header>
         <section class="profile">
-            <img class="profile__avatar" src="" alt="аватар пользователя" />
+            <img class="profile__avatar" src="#" alt="аватар пользователя" />
             <div class="profile__avatar-edit"></div>
             <div class="profile__form">
                 <h1 name="profileName" class="profile__name"></h1>
@@ -88,7 +88,7 @@
                 <button type="submit" class="popup__submit-btn popup__submit-btn_delete-confirm">Да</button>
             </form>
 
-        </div>
+        </div></div>
         <template class="template">
             <div class="element">
                 <img class="element__image" src="#" alt="пустышка" />
