--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         </header>
         <section class="profile">
             <img class="profile__avatar" src="#" alt="аватар пользователя" />
-            <div class="profile__avatar_edit"></div>
+            <div class="profile__edit-avatar"></div>
             <div class="profile__form">
                 <h1 name="profileName" class="profile__name"></h1>
                 <p name="profileAbout" class="profile__about"></p>
