--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                     alt="логотип сайта" /></a>
         </header>
         <section class="profile">
-            <img class="profile__avatar" src="#" alt="аватар пользователя" />
+            <img class="profile__avatarIcon" src="#" alt="аватар пользователя" />
             <div class="profile__edit-avatar"></div>
             <div class="profile__form">
                 <h1 name="profileName" class="profile__name"></h1>
