--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             <button type="button" class="popup__close-btn popup__close-btn_zoom-image"></button>
         </div>
     </div>
-    <div class="popup popup__avatar">
+    <div class="popup popup_avatar">
         <div class="popup__window popup__window-avatar">
             <button type="button" class="popup__close-btn popup__close-btn_avatar"></button>
             <h3 class="popup__title">Обновить аватар</h3>
